package com.conect4maxmax.conect4.service;

public class SettingsMenuService {
    
}
