@startuml mvc_front

package "mvc_front" {
    class index {}
    class scripts {}
    package "js" {
        class AppController {}
        package "menus" {
            class ControllerMenu {}
            class ViewMenu {}
            class ModelMenu {}
        }
        package "game" {
            class ControllerGame {}
            class ViewGame {}

        }
        package "board" {
            class ControllerBoard {}
            class ViewBoard {}

        }
        package "players" {
            class ControllerPlayers {}
            class ViewPlayers {}

        }
        package "messages" {}

    }
}

package "spring_boot_backend" {
    package "controllers" {
        class RestControllerGame {}
        class RestControllerBoard {}
        class RestControllerPlayers {}
        class RestSettingsMenuController {}
    }
    package "services" {
        class SettingsMenuService {}
        class GameService {}
        class BoardService {}
        class PlayersService {}
    }
    package "models" {
        
    }
}


index --> scripts
scripts --> AppController

AppController *--> ControllerMenu
ControllerMenu *--> ControllerGame
ControllerGame *--> ControllerBoard
ControllerGame *--> ControllerPlayers

ControllerGame *--> ViewGame
ViewGame --> ViewBoard
ViewGame --> ViewPlayers
ControllerMenu *--> ViewMenu

ControllerBoard *--> ViewBoard

ControllerPlayers *--> ViewPlayers

ControllerGame ..> RestControllerGame 
ControllerBoard ..> RestControllerBoard
ControllerPlayers ..> RestControllerPlayers
ControllerMenu ..> RestSettingsMenuController

RestSettingsMenuController --> SettingsMenuService
RestControllerGame --> GameService
RestControllerBoard --> BoardService
RestControllerPlayers --> PlayersService

GameService --> BoardService
GameService --> PlayersService

SettingsMenuService --> BoardService
SettingsMenuService --> PlayersService

controllers --> services
services --> models



@enduml